Stop padding causing properties group to overflow

--- a/src/components/PropertiesEditor/PropertiesEditor.scss
+++ b/src/components/PropertiesEditor/PropertiesEditor.scss
@@ -43,7 +43,7 @@
     @include use-flex($direction: column, $align: flex-start, $flex: 0);
 
     padding: 0 15px;
-    width: 100%;
+    width: calc(100% - 30px);
 
     .header {
       @include use-flex();
